tests/rosetta/out/Smalltalk/barnsley-fern.out
/tmp/barnsley-fern.st:15: parse error, expected ']'
