tests/rosetta/out/Smalltalk/barnsley-fern.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| xMin xMax yMin yMax width nIter dx dy height grid row line col seed randInt next x y ix iy i res r nx ny |
xMin := -2.182.
xMax := 2.6558.
yMin := 0.
yMax := 9.9983.
width := 60.
nIter := 10000.
dx := (xMax - xMin).
dy := (yMax - yMin).
height := (((width * dy)) / dx) asInteger.
grid := {}.
row := 0.
[(row < height)] whileTrue: [.
line := {}.
col := 0.
[(col < width)] whileTrue: [.
line := line copyWith: ' '.
col := (col + 1).
].
.
grid := grid copyWith: line.
row := (row + 1).
].
.
seed := 1.
randInt := [:s :n | next := (((((s * 1664525)) + 1013904223)) % 2147483647).
{next. (next % n)}. ].
x := 0.
y := 0.
ix := ((((width asFloat) * ((x - xMin)))) / dx) asInteger.
iy := ((((height asFloat) * ((yMax - y)))) / dy) asInteger.
((((((((ix >= 0)) and: [((ix < width))])) and: [((iy >= 0))])) and: [((iy < height))])) ifTrue: [
grid at: iy at: ix put: '*'.
] .
i := 0.
[(i < nIter)] whileTrue: [.
res := randInt value: seed value: 100.
seed := res at: 0.
r := res at: 1.
((r < 85)) ifTrue: [
nx := (((0.85 * x)) + ((0.04 * y))).
ny := (((((-0.04 * x)) + ((0.85 * y)))) + 1.6).
x := nx.
y := ny.
] ifFalse: [
((r < 92)) ifTrue: [
nx := (((0.2 * x)) - ((0.26 * y))).
ny := (((((0.23 * x)) + ((0.22 * y)))) + 1.6).
x := nx.
y := ny.
] ifFalse: [
((r < 99)) ifTrue: [
nx := (((-0.15 * x)) + ((0.28 * y))).
ny := (((((0.26 * x)) + ((0.24 * y)))) + 0.44).
x := nx.
y := ny.
] ifFalse: [
x := 0.
y := (0.16 * y).
].
].
].
ix := ((((width asFloat) * ((x - xMin)))) / dx) asInteger.
iy := ((((height asFloat) * ((yMax - y)))) / dy) asInteger.
((((((((ix >= 0)) and: [((ix < width))])) and: [((iy >= 0))])) and: [((iy < height))])) ifTrue: [
grid at: iy at: ix put: '*'.
] .
i := (i + 1).
].
.
row := 0.
[(row < height)] whileTrue: [.
line := ''.
col := 0.
[(col < width)] whileTrue: [.
line := (line + (grid at: row at: col)).
col := (col + 1).
].
.
Transcript show: (line) printString; cr.
row := (row + 1).
].
.
